// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider should show tooltip when hovering slider handler 1`] = `
<div>
  <div
    class="alu-tooltip  alu-tooltip-placement-top "
  >
    <div
      class="alu-tooltip-content"
    >
      <div
        class="alu-tooltip-arrow"
      />
      <div
        class="alu-tooltip-inner"
        role="tooltip"
      >
        30
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
<div>
  <div
    class="alu-tooltip  alu-tooltip-placement-top  alu-tooltip-hidden"
  >
    <div
      class="alu-tooltip-content"
    >
      <div
        class="alu-tooltip-arrow"
      />
      <div
        class="alu-tooltip-inner"
        role="tooltip"
      >
        30
      </div>
    </div>
  </div>
</div>
`;
